--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 <label>Pilih Produk</label>
                 <select name="product" class="form-control" id="product">
                     <option value="">-- Pilih Produk --</option>
-                    <option value="produk_1">KOSTAN annas</option>
-                    <option value="produk_2">KOSTAN greensuite</option>
-                    <option value="produk_3">KOSTAN putri muslimah ummi</option>
-                    <option value="produk_4">KOSTAN putri qonita</option>
+                    <option value="KOSTAN annas">KOSTAN annas</option>
+                    <option value="KOSTAN greensuite">KOSTAN greensuite</option>
+                    <option value="KOSTAN putri muslimah ummi">KOSTAN putri muslimah ummi</option>
+                    <option value="KOSTAN putri qonita4">KOSTAN putri qonita</option>
                 </select>
             </div>
             <div class="form-item">
