--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         dekat kampus dan tidak perlu khawatir lagi datang telat.
                     </p>
                     <img src="images/fadel annas.jpg" alt="customer image">
-                    <span>Customer Name, Country</span>
+                    <span>Fadel annas, Padang</span>
                 </div>
                 <!-- end of single customer -->
                 <!-- single customer -->
@@ -367,7 +367,7 @@
                         dingin kalo lagi siang hari, kostan deket dengan pusat perbelanjaan sehingga tidak perlu lagi
                         jauh-jauh nyari warung buat beli perlengkapan sehari sehari-hari</p>
                     <img src="images/hisyam.jpg" alt="customer image">
-                    <span>Customer Name, Country</span>
+                    <span>Muhammad Hisyam, Jakarta</span>
                 </div>
                 <!-- end of single customer -->
                 <!-- single customer -->
@@ -385,7 +385,7 @@
                         jadi gak bakal bosen di kostan. bakal betah di kostan apalagi kalo lagi banyak tugas kuliah
                         jadi gak perlu keluar buat balikin mood untuk ngerjain tugas kuliah. </p>
                     <img src="images/nopal 3.jpg" alt="customer image">
-                    <span>Customer Name, Country</span>
+                    <span>Naufal hamiz, Jakarta</span>
                 </div>
                 <!-- end of single customer -->
             </div>
