--- a/index.html
+++ b/index.html
@@ -326,14 +326,13 @@
         </div>
     </section>
 
-
-    <section class="customers" id="customers">
+       <!--  <section class="customers" id="customers">
         <div class="sec-width">
             <div class="title">
                 <h2>customers</h2>
             </div>
             <div class="customers-container">
-                <!-- single customer -->
+                 single customer
                 <div class="customer">
                     <div class="rating">
                         <span><i class="fas fa-star"></i></span>
@@ -351,8 +350,8 @@
                     <img src="images/fadel annas.jpg" alt="customer image">
                     <span>Fadel annas, Padang</span>
                 </div>
-                <!-- end of single customer -->
-                <!-- single customer -->
+                 //end of single customer 
+                //single customer 
                 <div class="customer">
                     <div class="rating">
                         <span><i class="fas fa-star"></i></span>
@@ -369,8 +368,8 @@
                     <img src="images/hisyam.jpg" alt="customer image">
                     <span>Muhammad Hisyam, Jakarta</span>
                 </div>
-                <!-- end of single customer -->
-                <!-- single customer -->
+                //end of single customer
+                //single customer 
                 <div class="customer">
                     <div class="rating">
                         <span><i class="fas fa-star"></i></span>
@@ -387,10 +386,12 @@
                     <img src="images/nopal 3.jpg" alt="customer image">
                     <span>Naufal hamiz, Jakarta</span>
                 </div>
-                <!-- end of single customer -->
+                // end of single customer
             </div>
         </div>
     </section>
+    -->
+   
     <!-- end of body content -->
 
     <!-- footer -->
